# Monte-Carlo-Tree-Search

./: .gitignore  README.md  pyproject.toml
mcts/: mcts.ipynb
mcts/notebooks/: mcts.ipynb
mcts/settings/: constants.py
mcts/utils/: classes.py  funcs.py
